# document-suite

./: .env.example  docker-compose.yml
agent-system/: .env-example  init_prompts.py  main.py  pyproject.toml
agent-system/src/: agents.py  datastructure.py  edge_conditions.py  frontend.py  llm.py  nodes.py  tools.py  util.py
agent-system/src/agents/: abstract.py  tools.py
agent-system/src/agents/conversation_agent/: agent.py
extraction-service/tesseract/: dockerfile
llm-service/: dockerfile  go.work  go.work.sum
llm-service/client/: go.mod  go.sum  llms.go  main.go
llm-service/server/: go.mod  go.sum  main.go
migration/: Dockerfile  go.mod  main.go  sqlc.yaml
migration/queries/: query.sql
ocr-services/tesseract/: Dockerfile  go.mod  go.sum  main.go
web-interface/: main.py  pyproject.toml
workflow/: Dockerfile  config.toml  go.mod  go.sum  main.go  sqlc.yaml
workflow-worker/: Dockerfile  go.mod  go.sum  main.go
workflow-worker/activities/: main.go
workflow-worker/src/: clients.go  temporal.go  util.go
workflow-worker/workflows/: main.go
workflow/activities/: main.go  pgcrud.go  postgres.go  qdrant.go  s3.go
workflow/core/: clients.go  datastructure.go  temporal.go  util.go
workflow/datamodel/: query.sql.go
workflow/migration/: main.go  sqlc.yaml
workflow/migration/datamodel/: db.go  models.go
workflow/migration/migrations/: 000001_document_model.down.sql  000001_document_model.up.sql
workflow/migration/queries/: query.sql
workflow/src/: clients.go  datastructure.go  temporal.go  util.go
workflow/workflows/: main.go
(+13 files in other folders)
