[project]
name = "web-interface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.1",
    "azure-search-documents>=11.6.0",
    "langchain[anthropic]>=1.2.7",
    "langchain-anthropic>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "langgraph-api>=0.7.13",
    "langgraph-sdk>=0.3.3",
    "mcp[cli]>=1.26.0",
    "streamlit>=1.53.1",
]
